packages/block-editor/src/components/inserter/style.scss
/**
 * Block Library
 */

// Plus button.
.block-editor-inserter {
	display: inline-block;
	background: none;
	border: none;
	padding: 0;
	font-family: $default-font;
	font-size: $default-font-size;
	line-height: $default-line-height;

	@include break-medium {
		position: relative;
	}

	.block-editor-inserter__toggle {
		display: inline-flex;
		align-items: center;
		color: $dark-gray-500;
		background: none;
		cursor: pointer;
		border: none;
		outline: none;
		transition: color 0.2s ease;
		@include reduce-motion("transition");
	}
}

// Popover container.
.block-editor-inserter__popover > .components-popover__content {
	@include break-medium {
		overflow-y: visible;
		width: 86vw; // This is limited by a max-width.
		height: 92vh; // This is limited by a max-height from the popover component itself.

		// We take up the whole space horizontally, so as to afford a preview panel appearing.
		// The layer is only for layout, and should not block clicks through it.
		pointer-events: none;
	}

	// Remove the popover styling and apply it instead to each sub panel.
	box-shadow: none;
	border: none;
	background: none;
}

// Container for all inserter content.
.block-editor-inserter__menu {
	height: 100%;
	display: flex;
	width: 100%;

	@include break-medium {
		min-width: 480px;
		position: relative;
	}

	.components-tip {
		padding: 0 $grid-size-large $grid-size-large $grid-size-large;
		display: flex;
		align-items: center;
	}
}

// Show popover background behind main menu and preview both.
.block-editor-inserter__main-area,
.block-editor-inserter__preview-panel {
	background: $white;
	width: 49%;
	width: calc(50% - #{$grid-size-large});

	@include break-medium() {
		box-shadow: $shadow-popover;
		border: $border-width solid $light-gray-500;
		max-width: 480px;
	}
}

// Container for just the block library.
.block-editor-inserter__main-area {
	display: flex;
	flex-direction: column;
	height: 100%;
	margin-right: $grid-size-large;

	@include break-medium {
		position: relative;

		// Re-enable clicks on this layer.
		pointer-events: all;
	}
}

.block-editor-inserter__inline-elements {
	margin-top: -1px;
}

.block-editor-inserter__menu.is-bottom::after {
	border-bottom-color: $white;
}

.components-popover.block-editor-inserter__popover {
	z-index: z-index(".components-popover.block-editor-inserter__popover");
}

.components-popover input[type="search"].block-editor-inserter__search {
	display: block;
	flex-shrink: 0;
	margin: $grid-size-large;
	padding: 11px $grid-size-large;
	position: relative;
	z-index: 1;
	border-radius: $radius-round-rectangle;

	/* Fonts smaller than 16px causes mobile safari to zoom. */
	font-size: $mobile-text-min-font-size;
	@include break-small {
		font-size: $default-font-size;
	}

	&:focus {
		@include input-style__focus();
	}
}

.block-editor-inserter__results {
	flex-grow: 1;
	overflow: auto;
	position: relative;
	z-index: 1; // Necessary for the stacked card below parent blocks to show up.
	padding: 0 $grid-size-large $grid-size-large $grid-size-large;

	&:focus {
		outline: $border-width dotted $dark-gray-500;
	}

	// Don't show the top border on the first panel, let the Search border be the border.
	[role="presentation"] + .components-panel__body {
		border-top: none;
	}
}

.block-editor-inserter__popover .block-editor-block-types-list {
	margin: 0 -8px;
}

.block-editor-inserter__reusable-blocks-panel {
	position: relative;
	text-align: right;
}

.block-editor-inserter__manage-reusable-blocks {
	margin: $grid-size-large 0 0 $grid-size-large;
}

.block-editor-inserter__no-results {
	font-style: italic;
	padding: 24px;
	text-align: center;
}

.block-editor-inserter__child-blocks {
	padding: 0 $grid-size-large;
}

.block-editor-inserter__parent-block-header {
	display: flex;
	align-items: center;

	h2 {
		font-size: 13px;
	}

	.block-editor-block-icon {
		margin-right: $grid-size;
	}
}

// Container for the preview.
.block-editor-inserter__preview-panel {
	display: none;

	// Show preview panel when inserter is not modal.
	@include break-medium () {
		display: block;
		position: relative;
		height: 480px;
		padding: $grid-size-large;
		@include edit-post__fade-in-animation();

		.block-editor-block-card {
			min-height: 6em;
			padding-bottom: $grid-size-large;
			margin-bottom: $grid-size-large;
			border-bottom: $border-width solid $light-gray-500;
		}

		// Create a white overlay at the bottom of the preview to soft-crop the preview.
		&::after {
			content: "";
			display: block;
			position: absolute;
			right: 0;
			bottom: 0;
			left: 0;
			height: $grid-size-large;
			background: $white;
		}
	}
}

